# Chess

./: .gitignore  CMakeLists.txt  README.md  lib
include/: SDL2  UI.h  board.h  button.h  button_def.h  color_def.h  game.h  menu.h  menu_def.h  moves.h  moves_def.h  pieces.h  pieces_def.h  pieces_manager.h  texture_manager.h
src/: UI.cpp  board.cpp  button.cpp  game.cpp  main.cpp  menu.cpp  moves.cpp  pieces.cpp  pieces_manager.cpp  texture_manager.cpp
